<?xml version="1.0"?>
<package format="3">
  <name>interactive_marker_tutorials</name>
  <version>0.11.0</version>
  <description>The interactive_marker_tutorials package</description>

  <maintainer email="mabel@openrobotics.org">Mabel Zhang</maintainer>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/interactive_marker_tutorials</url>

  <author >David Gossow</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

</package>
