<package format="3">
  <name>librviz_tutorial</name>
  <version>0.11.0</version>
  <description>
     Tutorial showing how to compile your own C++ program with RViz displays and features.
  </description>
  <maintainer email="mabel@openrobotics.org">Mabel Zhang</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/librviz_tutorial</url>
  <author>Dave Hershberger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
  </export>
</package>
