<package format="3">
    <name>visualization_tutorials</name>
    <version>0.11.0</version>
    <description>
        Metapackage referencing tutorials related to rviz and visualization.
    </description>
    <maintainer email="mabel@openrobotics.org">Mabel Zhang</maintainer>
    <license>BSD</license>

    <url>http://ros.org/wiki/visualization_tutorials</url>
    <author>Dave Hershberger</author>
    <author>David Gossow</author>
    <author>Josh Faust</author>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>interactive_marker_tutorials</exec_depend>
    <exec_depend>librviz_tutorial</exec_depend>
    <exec_depend>rviz_plugin_tutorials</exec_depend>
    <exec_depend>rviz_python_tutorial</exec_depend>
    <exec_depend>visualization_marker_tutorials</exec_depend>

    <export>
        <metapackage/>
    </export>
</package>



